melhorando titulos das listas

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     <div class="tab-contents  active">
       <div class="tab-content" data-tab="1">
-        <ul id="ingredientes-lista" class="costela">
+        <ul id="ingredientes-lista" class="....Costela-Batata....">
           <li>
             <span>Costela bruta:.</span>
             <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Costela_bruta">
@@ -81,7 +81,7 @@
         </ul>
       </div>
       <div class="tab-content" data-tab="2">
-        <ul id="ingredientes-lista" class="carne">
+        <ul id="ingredientes-lista" class="....Carne-Assada....">
           <li>
             <span>carne: ........</span>
             <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Carne">
@@ -136,7 +136,7 @@
         </ul>
       </div>
       <div class="tab-content" data-tab="3">
-        <ul id="ingredientes-lista" class="coxa">
+        <ul id="ingredientes-lista" class="....Sobre-Coxa....">
           <li>
             <span>Coxa: ........</span>
             <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Coxa">
@@ -186,7 +186,7 @@
         </ul>
       </div>
       <div class="tab-content" data-tab="4">
-        <ul id="ingredientes-lista" class="frango">
+        <ul id="ingredientes-lista" class="....Strogonoff....">
           <li>
             <span>Frango: .........</span>
             <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Frango">
@@ -246,7 +246,7 @@
         </ul>
       </div>
       <div class="tab-content" data-tab="5">
-        <ul id="ingredientes-lista" class="ervilha">
+        <ul id="ingredientes-lista" class="....Ervilha....">
           <li>
             <span>Ervilha: .........</span>
             <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Ervilha">
@@ -286,7 +286,7 @@
         </ul>
       </div>
       <div class="tab-content" data-tab="6">
-        <ul id="ingredientes-lista" class="verde">
+        <ul id="ingredientes-lista" class="....Caldo-Verde....">
           <li>
             <span>Batata: ..........</span>
             <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Batata">
@@ -335,7 +335,7 @@
         </ul>
       </div>
       <div class="tab-content" data-tab="7">
-        <ul id="ingredientes-lista" class="bucho">
+        <ul id="ingredientes-lista" class="....Dobradinha....">
           <li>
             <span>Bucho: .........</span>
             <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Bucho">
@@ -405,7 +405,7 @@
         </ul>
       </div>
       <div class="tab-content" data-tab="8">
-        <ul id="ingredientes-lista" class="bucho">
+        <ul id="ingredientes-lista" class="....Mocotó....">
           <li>
             <span>Mocotó: .........</span>
             <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Mocotó">
@@ -480,7 +480,7 @@
         </ul>
       </div>
       <div class="tab-content" data-tab="9">
-        <ul id="ingredientes-lista" class="abobora">
+        <ul id="ingredientes-lista" class="....Creme-de-Abóbora....">
 
           <li>
             <span>Calabresa:.....</span>
@@ -531,7 +531,7 @@
         </ul>
       </div>
       <div class="tab-content" data-tab="10">
-        <ul id="ingredientes-lista" class="abobora">
+        <ul id="ingredientes-lista" class="....Feijoada....">
 
           <li>
             <span>Feijão preto:..</span>
@@ -539,8 +539,8 @@
             kg
           </li>
           <li>
-            <span>Feijuadinha: .</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Feijuadinha">
+            <span>Feijoadinha: .</span>
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Feijoadinha">
             kg
           </li>
           <li>
@@ -556,7 +556,7 @@
         </ul>
       </div>
       <div class="tab-content" data-tab="11">
-        <ul id="ingredientes-lista" class="farofa">
+        <ul id="ingredientes-lista" class="....Farofa....">
           <li>
             <span>Farinha:......</span>
             <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Farinha">
