--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <h1>Controle caldos</h1>
     <nav class="tabs">
       <section id="costela" class="tab active" data-tab="1">Costela</section>
-      <section id="carne-assada" class="tab" data-tab="2">Carne Assada</section>
-      <section id="sobre-coxa" class="tab" data-tab="3">Sobre coxa</section>
-      <section id="strogonoff" class="tab" data-tab="4">Strogonoff</section>
-      <section id="ervilha" class="tab" data-tab="5">Ervilha</section>
-      <section id="caldo-verde" class="tab" data-tab="6">Caldo Verde</section>
-      <section id="dobradinha" class="tab" data-tab="7">Dobradinha</section>
-      <section id="mocotó" class="tab" data-tab="8">Mocotó</section>
-      <section id="caldo-abobora" class="tab" data-tab="9">Caldo Abóbora</section>
-      <section id="feiloada" class="tab" data-tab="10">Feijoada</section>
-      <section id="farofa" class="tab" data-tab="11">Farofa</section>
+      <section id="carne-assada" class="tab active" data-tab="2">Carne Assada</section>
+      <section id="sobre-coxa" class="tab active" data-tab="3">Sobre coxa</section>
+      <section id="strogonoff" class="tab active" data-tab="4">Strogonoff</section>
+      <section id="ervilha" class="tab active" data-tab="5">Ervilha</section>
+      <section id="caldo-verde" class="tab active" data-tab="6">Caldo Verde</section>
+      <section id="dobradinha" class="tab active" data-tab="7">Dobradinha</section>
+      <section id="mocotó" class="tab active" data-tab="8">Mocotó</section>
+      <section id="caldo-abobora" class="tab active" data-tab="9">Caldo Abóbora</section>
+      <section id="feiloada" class="tab active" data-tab="10">Feijoada</section>
+      <section id="farofa" class="tab active" data-tab="11">Farofa</section>
     </nav>
     <div class="tab-contents  active">
       <div class="tab-content" data-tab="1">
