--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
           </li>
           <li>
             <span>Cenoura:.......</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Cenoura">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Cenoura,">
             kg
           </li>
           <li>
@@ -373,7 +373,7 @@
           </li>
           <li>
             <span>Feijão branco: </span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Feijão_branco">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Feijão_branco,">
             g
           </li>
           <li>
@@ -413,67 +413,67 @@
           </li>
           <li>
             <span>Batata: .........</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Batata">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Batata">
             kg
           </li>
           <li>
             <span>Cenoura:.......</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Cenoura">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Cenoura">
             kg
           </li>
           <li>
             <span>Pó frango: ....</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Pó_carne">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Pó_carne">
             g
           </li>
           <li>
             <span>Colorau: .......</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Colorau">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Colorau">
             g
           </li>
           <li>
             <span>Pimentão: ....</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Pimentão">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Pimentão">
             g
           </li>
           <li>
             <span>Cebola: .........</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Cebola">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Cebola">
             g
           </li>
           <li>
             <span>Azeite: .........</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Azeite">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Azeite">
             g
           </li>
           <li>
             <span>Alho: .............</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Alho">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Alho">
             g
           </li>
           <li>
             <span>Óleo: ............</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Óleo">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Óleo">
             g
           </li>
           <li>
             <span>Feijão branco: </span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Feijão_branco">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Feijão_branco">
             g
           </li>
           <li>
             <span>Calabresa: ....</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Calabresa">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Calabresa">
             g
           </li>
           <li>
             <span>Bacon: ..........</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Bacon">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Bacon">
             g
           </li>
           <li>
             <span>Azeitona: ......</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Azeitona">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Azeitona">
             g
           </li>
 
@@ -483,7 +483,7 @@
         <ul id="ingredientes-lista" class="....Creme-de-Abóbora....">
           <li>
             <span>Calabresa:.....</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Calabresa">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Calabresa,">
             g
           </li>
           <li>
@@ -498,32 +498,32 @@
           </li>
           <li>
             <span>Pó frango: ....</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Pó_carne">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Pó_carne,">
             g
           </li>
           <li>
             <span>Pimentão: ....</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Pimentão">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Pimentão,">
             g
           </li>
           <li>
             <span>Cebola: .........</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Cebola">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Cebola,">
             g
           </li>
           <li>
             <span>Alho: .............</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Alho">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Alho,">
             g
           </li>
           <li>
             <span>Óleo: ............</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Óleo">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Óleo,">
             g
           </li>
           <li>
             <span>Colorau: .......</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Colorau">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente=",Colorau,">
             g
           </li>
 
@@ -543,12 +543,12 @@
           </li>
           <li>
             <span>Alho: .............</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Alho">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Alho+">
             g
           </li>
           <li>
             <span>Óleo: ............</span>
-            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Óleo">
+            <input type="number" step="0.01" min="0" value="0" class="peso" data-ingrediente="Óleo+">
             g
           </li>
         </ul>
